hphp/hack/test/typecheck/dynamic/dynamic_error_message2.php
<?hh

function testObjGet(dynamic $x): int {
  $y = $x();
  return $y;
}
